--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ bytes = "0.5.3"
 serde_json = "1.0"
 serde = { version = "1.0.106", features = ["derive"] }
 rand = "0.7"
+diesel = { version = "1.4.4", features = ["sqlite"] }
+dotenv = "0.15.0"
